[gd_scene load_steps=3 format=3 uid="uid://ci3gk2w5jbj7x"]

[ext_resource type="Script" path="res://ImageNode.gd" id="2_fm78k"]
[ext_resource type="Texture2D" uid="uid://c60x37yyv1fkj" path="res://Assets/UI/image-icon.png" id="2_n0mtw"]

[node name="ImageNode" type="GraphNode" groups=["IMAGE", "graph_nodes"]]
offset_right = 325.0
offset_bottom = 166.0
mouse_default_cursor_shape = 6
theme_override_constants/separation = 10
title = "NodeTitle"
position_offset = Vector2(1114, 272)
show_close = true
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color(1, 1, 1, 1)
slot/4/left_icon = null
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color(1, 1, 1, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
script = ExtResource("2_fm78k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 7

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_n0mtw")
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Image Slot"
vertical_alignment = 2

[node name="SlotDropdown" type="OptionButton" parent="."]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "BIG"
popup/item_0/id = 0
popup/item_1/text = "SMALL"
popup/item_1/id = 1

[node name="Label2" type="Label" parent="."]
visible = false
layout_mode = 2
text = "Effect"

[node name="SetHideDropdown" type="OptionButton" parent="."]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "HIDE"
popup/item_0/id = 0
popup/item_1/text = "SET"
popup/item_1/id = 1

[node name="SetImageInfo" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
theme_override_constants/separation = 9

[node name="TargetDropdown" type="OptionButton" parent="SetImageInfo"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "PERSON_ONE"
popup/item_0/id = 0
popup/item_1/text = "PERSON_TWO"
popup/item_1/id = 1
popup/item_2/text = "OTHER"
popup/item_2/id = 2

[node name="SetPerson" type="VBoxContainer" parent="SetImageInfo"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="SetPersonBig" type="VBoxContainer" parent="SetImageInfo/SetPerson"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="ModeDropdown" type="OptionButton" parent="SetImageInfo/SetPerson/SetPersonBig"]
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "PAPERDOLL"
popup/item_0/id = 0
popup/item_1/text = "SOLO"
popup/item_1/id = 1
popup/item_2/text = "DUO"
popup/item_2/id = 2

[node name="PaperdollInfo" type="VBoxContainer" parent="SetImageInfo/SetPerson/SetPersonBig"]
layout_mode = 2
theme_override_constants/separation = 9

[node name="ExpressionHBox" type="HBoxContainer" parent="SetImageInfo/SetPerson/SetPersonBig/PaperdollInfo"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="EyesDropdown" type="OptionButton" parent="SetImageInfo/SetPerson/SetPersonBig/PaperdollInfo/ExpressionHBox"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 8
selected = 0
popup/item_0/text = "Eyes"
popup/item_0/id = 0
popup/item_1/text = "OPEN"
popup/item_1/id = 1
popup/item_2/text = "HALF"
popup/item_2/id = 2
popup/item_3/text = "SCARED"
popup/item_3/id = 3
popup/item_4/text = "ANGRY"
popup/item_4/id = 4
popup/item_5/text = "CLOSED"
popup/item_5/id = 5
popup/item_6/text = "WIDE"
popup/item_6/id = 6
popup/item_7/text = "ROLLING"
popup/item_7/id = 7

[node name="MouthDropdown" type="OptionButton" parent="SetImageInfo/SetPerson/SetPersonBig/PaperdollInfo/ExpressionHBox"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 7
selected = 0
popup/item_0/text = "Mouth"
popup/item_0/id = 0
popup/item_1/text = "SMILE"
popup/item_1/id = 1
popup/item_2/text = "PARTED"
popup/item_2/id = 2
popup/item_3/text = "GAPING"
popup/item_3/id = 3
popup/item_4/text = "FROWN"
popup/item_4/id = 4
popup/item_5/text = "CLENCHED"
popup/item_5/id = 5
popup/item_6/text = "BITELIP"
popup/item_6/id = 6

[node name="PoseFramingHBox" type="HBoxContainer" parent="SetImageInfo/SetPerson/SetPersonBig/PaperdollInfo"]
layout_mode = 2
theme_override_constants/separation = 18

[node name="PoseDropdown" type="OptionButton" parent="SetImageInfo/SetPerson/SetPersonBig/PaperdollInfo/PoseFramingHBox"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
selected = 0
popup/item_0/text = "Pose"
popup/item_0/id = 0
popup/item_1/text = "DEFAULT"
popup/item_1/id = 1
popup/item_2/text = "NERVOUS"
popup/item_2/id = 2
popup/item_3/text = "ANGRY"
popup/item_3/id = 3

[node name="FramingDropdown" type="OptionButton" parent="SetImageInfo/SetPerson/SetPersonBig/PaperdollInfo/PoseFramingHBox"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
selected = 0
popup/item_0/text = "Framing"
popup/item_0/id = 0
popup/item_1/text = "FACE"
popup/item_1/id = 1
popup/item_2/text = "BUST"
popup/item_2/id = 2
popup/item_3/text = "FULL"
popup/item_3/id = 3

[node name="SoloInfo" type="HBoxContainer" parent="SetImageInfo/SetPerson/SetPersonBig"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="SetImageInfo/SetPerson/SetPersonBig/SoloInfo"]
layout_mode = 2
text = "Pose: "

[node name="SoloDropdown" type="OptionButton" parent="SetImageInfo/SetPerson/SetPersonBig/SoloInfo"]
layout_mode = 2
item_count = 14
selected = 0
popup/item_0/text = "SITTING"
popup/item_0/id = 0
popup/item_1/text = "KNEELING"
popup/item_1/id = 1
popup/item_2/text = "HUG"
popup/item_2/id = 2
popup/item_3/text = "FROM_BEHIND"
popup/item_3/id = 3
popup/item_4/text = "BENT_OVER"
popup/item_4/id = 4
popup/item_5/text = "ALL_FOURS"
popup/item_5/id = 5
popup/item_6/text = "MISSIONARY"
popup/item_6/id = 6
popup/item_7/text = "PILEDRIVER"
popup/item_7/id = 7
popup/item_8/text = "WALKING_AWAY"
popup/item_8/id = 8
popup/item_9/text = "ASSJOB"
popup/item_9/id = 9
popup/item_10/text = "COWGIRL"
popup/item_10/id = 10
popup/item_11/text = "FACE_SITTING"
popup/item_11/id = 11
popup/item_12/text = "PAIZURI"
popup/item_12/id = 12
popup/item_13/text = "SLEEPING"
popup/item_13/id = 13

[node name="DuoInfo" type="HBoxContainer" parent="SetImageInfo/SetPerson/SetPersonBig"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="SetImageInfo/SetPerson/SetPersonBig/DuoInfo"]
layout_mode = 2
text = "Pose: "

[node name="DuoDropdown" type="OptionButton" parent="SetImageInfo/SetPerson/SetPersonBig/DuoInfo"]
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "HOLDING_HANDS"
popup/item_0/id = 0

[node name="SetPersonSmall" type="VBoxContainer" parent="SetImageInfo/SetPerson"]
visible = false
layout_mode = 2
theme_override_constants/separation = 9

[node name="ModeDropdown" type="OptionButton" parent="SetImageInfo/SetPerson/SetPersonSmall"]
visible = false
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "ACTION"
popup/item_0/id = 0
popup/item_1/text = "REACTION"
popup/item_1/id = 1

[node name="ActionDropdown" type="OptionButton" parent="SetImageInfo/SetPerson/SetPersonSmall"]
visible = false
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "KISS_TONGUE"
popup/item_0/id = 0

[node name="ReactionDropdown" type="OptionButton" parent="SetImageInfo/SetPerson/SetPersonSmall"]
visible = false
layout_mode = 2
item_count = 1
selected = 0
popup/item_0/text = "SHOCKED"
popup/item_0/id = 0

[node name="PersonImageInfo" type="HBoxContainer" parent="SetImageInfo/SetPerson/SetPersonSmall"]
layout_mode = 2

[node name="Label" type="Label" parent="SetImageInfo/SetPerson/SetPersonSmall/PersonImageInfo"]
layout_mode = 2
text = "person_image_id:"

[node name="LineEdit" type="LineEdit" parent="SetImageInfo/SetPerson/SetPersonSmall/PersonImageInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SetOther" type="VBoxContainer" parent="SetImageInfo"]
visible = false
layout_mode = 2
theme_override_constants/separation = 0

[node name="OtherImageInfo" type="HBoxContainer" parent="SetImageInfo/SetOther"]
layout_mode = 2

[node name="Label" type="Label" parent="SetImageInfo/SetOther/OtherImageInfo"]
layout_mode = 2
text = "other_image_id:"

[node name="LineEdit" type="LineEdit" parent="SetImageInfo/SetOther/OtherImageInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EffectInfo" type="HBoxContainer" parent="SetImageInfo"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="SetImageInfo/EffectInfo"]
layout_mode = 2
text = "Image Effect:"

[node name="EffectDropdown" type="OptionButton" parent="SetImageInfo/EffectInfo"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "NONE"
popup/item_0/id = 0
popup/item_1/text = "QUAKE"
popup/item_1/id = 1

[connection signal="close_request" from="." to="." method="_on_close_request"]
[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="item_selected" from="SlotDropdown" to="." method="_on_slot_dropdown_item_selected"]
[connection signal="item_selected" from="SetHideDropdown" to="." method="_on_set_hide_dropdown_item_selected"]
[connection signal="item_selected" from="SetImageInfo/TargetDropdown" to="." method="_on_target_dropdown_item_selected"]
[connection signal="item_selected" from="SetImageInfo/SetPerson/SetPersonBig/ModeDropdown" to="." method="_on_main_mode_dropdown_item_selected"]
[connection signal="item_selected" from="SetImageInfo/SetPerson/SetPersonBig/PaperdollInfo/ExpressionHBox/EyesDropdown" to="." method="_on_eyes_dropdown_item_selected"]
[connection signal="item_selected" from="SetImageInfo/SetPerson/SetPersonBig/PaperdollInfo/ExpressionHBox/MouthDropdown" to="." method="_on_mouth_dropdown_item_selected"]
[connection signal="item_selected" from="SetImageInfo/SetPerson/SetPersonBig/PaperdollInfo/PoseFramingHBox/PoseDropdown" to="." method="_on_pose_dropdown_item_selected"]
[connection signal="item_selected" from="SetImageInfo/SetPerson/SetPersonBig/PaperdollInfo/PoseFramingHBox/FramingDropdown" to="." method="_on_framing_dropdown_item_selected"]
[connection signal="item_selected" from="SetImageInfo/SetPerson/SetPersonBig/SoloInfo/SoloDropdown" to="." method="_on_solo_dropdown_item_selected"]
[connection signal="item_selected" from="SetImageInfo/SetPerson/SetPersonBig/DuoInfo/DuoDropdown" to="." method="_on_duo_dropdown_item_selected"]
[connection signal="item_selected" from="SetImageInfo/SetPerson/SetPersonSmall/ModeDropdown" to="." method="_on_lr_mode_dropdown_item_selected"]
[connection signal="item_selected" from="SetImageInfo/SetPerson/SetPersonSmall/ActionDropdown" to="." method="_on_action_dropdown_item_selected"]
[connection signal="item_selected" from="SetImageInfo/SetPerson/SetPersonSmall/ReactionDropdown" to="." method="_on_reaction_dropdown_item_selected"]
[connection signal="item_selected" from="SetImageInfo/EffectInfo/EffectDropdown" to="." method="_on_tween_dropdown_item_selected"]
